--- a/cdi-quickstart/src/main/resources/archetype-resources/pom.xml
+++ b/cdi-quickstart/src/main/resources/archetype-resources/pom.xml
@@ -910,26 +910,6 @@
                             </systemProperties>
                         </configuration>
                     </plugin>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-antrun-plugin</artifactId>
-                        <version>1.3</version>
-                        <executions>
-                            <execution>
-                                <id>test.webxml</id>
-                                <phase>process-test-resources</phase>
-                                <configuration>
-                                    <tasks>
-                                        <copy file="src/jetty/web.xml" toDir="src/main/webapp/WEB-INF"
-                                              overwrite="true"/>
-                                    </tasks>
-                                </configuration>
-                                <goals>
-                                    <goal>run</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-                    </plugin>
                 </plugins>
             </build>
 
@@ -1202,6 +1182,7 @@
                                 <include>.errai/**</include>
                                 <include>src/main/webapp/WEB-INF/deploy/**</include>
                                 <include>src/main/webapp/WEB-INF/lib/**</include>
+                                <include>src/main/webapp/app/**</include>
                                 <include>**/gwt-unitCache/**</include>
                                 <include>**/*.JUnit/**</include>
                             </includes>
