--- a/jaxrs-quickstart/src/main/resources/archetype-resources/pom.xml
+++ b/jaxrs-quickstart/src/main/resources/archetype-resources/pom.xml
@@ -1,13 +1,4 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- ~ Copyright 2011 JBoss, a divison Red Hat, Inc ~ ~ Licensed under the 
-  Apache License, Version 2.0 (the "License"); ~ you may not use this file 
-  except in compliance with the License. ~ You may obtain a copy of the License 
-  at ~ ~ http://www.apache.org/licenses/LICENSE-2.0 ~ ~ Unless required by 
-  applicable law or agreed to in writing, software ~ distributed under the 
-  License is distributed on an "AS IS" BASIS, ~ WITHOUT WARRANTIES OR CONDITIONS 
-  OF ANY KIND, either express or implied. ~ See the License for the specific 
-  language governing permissions and ~ limitations under the License. -->
-
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
@@ -42,11 +33,10 @@
 
   <properties>
     <errai.version>${errai.target.version}</errai.version>
-    <errai.jaxrs.version>${errai.jaxrs.target.version}</errai.jaxrs.version>
     <gwt.version>2.4.0</gwt.version>
     <gwt.maven.version>2.4.0</gwt.maven.version>
-    <webXmlPath>src/jetty/web.xml</webXmlPath>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <webDescriptor>jetty</webDescriptor>
   </properties>
 
   <dependencies>
@@ -71,12 +61,6 @@
 
     <dependency>
       <groupId>org.jboss.errai</groupId>
-      <artifactId>errai-common</artifactId>
-      <version>\${errai.version}</version>
-    </dependency>
-
-    <dependency>
-      <groupId>org.jboss.errai</groupId>
       <artifactId>errai-tools</artifactId>
       <version>\${errai.version}</version>
     </dependency>
@@ -84,14 +68,14 @@
     <dependency>
       <groupId>org.jboss.errai</groupId>
       <artifactId>errai-jaxrs-client</artifactId>
-      <version>\${errai.jaxrs.version}</version>
+      <version>\${errai.version}</version>
       <scope>provided</scope>
     </dependency>
 
     <dependency>
       <groupId>org.jboss.errai</groupId>
       <artifactId>errai-jaxrs-provider</artifactId>
-      <version>\${errai.jaxrs.version}</version>
+      <version>\${errai.version}</version>
     </dependency>
 
     <dependency>
@@ -112,24 +96,27 @@
       <scope>provided</scope>
       <version>\${gwt.version}</version>
     </dependency>
-
   </dependencies>
 
   <profiles>
     <profile>
+      <id>jetty</id>
+      <activation>
+        <activeByDefault>true</activeByDefault>
+      </activation>
+      <properties>
+        <webDescriptor>jetty</webDescriptor>
+      </properties>
+    </profile>
+
+    <profile>
       <id>jboss5</id>
 
       <properties>
-        <webXmlPath>src/jboss/web.xml</webXmlPath>
+        <webDescriptor>jboss5</webDescriptor>
       </properties>
 
       <dependencies>
-        <dependency>
-          <groupId>org.jboss.errai</groupId>
-          <artifactId>errai-bus</artifactId>
-          <version>\${errai.version}</version>
-        </dependency>
-
         <dependency>
           <groupId>org.jboss.errai</groupId>
           <artifactId>errai-common</artifactId>
@@ -177,72 +164,12 @@
         </dependency>
       </dependencies>
     </profile>
-    <profile>
-      <id>jboss6</id>
 
-      <properties>
-        <webXmlPath>src/jboss/web.xml</webXmlPath>
-      </properties>
-
-      <dependencies>
-        <dependency>
-          <groupId>org.jboss.errai</groupId>
-          <artifactId>errai-ioc</artifactId>
-          <exclusions>
-            <exclusion>
-              <artifactId>jsr250-api</artifactId>
-              <groupId>javax.annotation</groupId>
-            </exclusion>
-            <exclusion>
-              <artifactId>javax.inject</artifactId>
-              <groupId>javax.inject</groupId>
-            </exclusion>
-          </exclusions>
-          <scope>compile</scope>
-          <version>\${errai.version}</version>
-        </dependency>
-
-        <dependency>
-          <groupId>javax.inject</groupId>
-          <artifactId>javax.inject</artifactId>
-          <version>1</version>
-          <scope>provided</scope>
-        </dependency>
-
-        <dependency>
-          <groupId>org.slf4j</groupId>
-          <artifactId>slf4j-api</artifactId>
-          <version>1.6.1</version>
-          <scope>provided</scope>
-        </dependency>
-
-        <dependency>
-          <groupId>org.slf4j</groupId>
-          <artifactId>slf4j-log4j12</artifactId>
-          <version>1.6.1</version>
-          <scope>provided</scope>
-        </dependency>
-
-        <dependency>
-          <groupId>org.javassist</groupId>
-          <artifactId>javassist</artifactId>
-          <version>3.15.0-GA</version>
-          <scope>provided</scope>
-        </dependency>
-
-        <dependency>
-          <groupId>org.jboss.resteasy</groupId>
-          <artifactId>resteasy-jaxrs</artifactId>
-          <version>2.2.3.GA</version>
-          <scope>provided</scope>
-        </dependency>
-      </dependencies>
-    </profile>
     <profile>
       <id>jboss7</id>
 
       <properties>
-        <webXmlPath>src/jboss7/web.xml</webXmlPath>
+        <webDescriptor>jboss7</webDescriptor>
       </properties>
 
       <dependencies>
@@ -254,11 +181,12 @@
         </dependency>
       </dependencies>
     </profile>
+
     <profile>
       <id>tomcat</id>
 
       <properties>
-        <webXmlPath>src/tomcat/web.xml</webXmlPath>
+        <webDescriptor>tomcat</webDescriptor>
       </properties>
     </profile>
 
@@ -453,26 +381,7 @@
               </systemProperties>
             </configuration>
           </plugin>
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-antrun-plugin</artifactId>
-            <version>1.3</version>
-            <executions>
-              <execution>
-                <id>test.webxml</id>
-                <phase>process-test-resources</phase>
-                <configuration>
-                  <tasks>
-                    <copy file="src/testwebxml/web.xml" toDir="src/main/webapp/WEB-INF"
-                      overwrite="true" />
-                  </tasks>
-                </configuration>
-                <goals>
-                  <goal>run</goal>
-                </goals>
-              </execution>
-            </executions>
-          </plugin>
+          
           <plugin>
             <groupId>org.jboss.errai</groupId>
             <artifactId>jacoco-gwt-maven-plugin</artifactId>
@@ -520,12 +429,9 @@
         <artifactId>gwt-maven-plugin</artifactId>
         <version>\${gwt.maven.version}</version>
         <configuration>
-          <inplace>true</inplace>
           <logLevel>INFO</logLevel>
           <runTarget>App.html</runTarget>
-          <warSourceDirectory>src/main/webapp/</warSourceDirectory>
           <extraJvmArgs>-Xmx512m</extraJvmArgs>
-          <treeLogger>true</treeLogger>
           <hostedWebapp>src/main/webapp/</hostedWebapp>
         </configuration>
         <executions>
@@ -544,9 +450,6 @@
         <configuration>
           <source>1.6</source>
           <target>1.6</target>
-          <showDeprecation>true</showDeprecation>
-          <showWarnings>true</showWarnings>
-          <optimize>true</optimize>
         </configuration>
       </plugin>
 
@@ -554,10 +457,14 @@
         <artifactId>maven-war-plugin</artifactId>
         <version>2.1.1</version>
         <configuration>
-          <warSourceDirectory>src/main/webapp/</warSourceDirectory>
-          <webXml>\${webXmlPath}</webXml>
           <outputFileNameMapping>@{artifactId}@-@{baseVersion}@@{dashClassifier?}@.@{extension}@</outputFileNameMapping>
           <packagingExcludes>**/javax/**/*.*,**/client/local/**/*.class</packagingExcludes>
+          <webResources>
+            <resource>
+               <!-- this is relative to the pom.xml directory -->
+              <directory>src/${webDescriptor}</directory>
+            </resource>
+          </webResources>
         </configuration>
       </plugin>
 
@@ -593,7 +500,7 @@
         dependencies. Run mvn with -Pintegration-test to enable testing. -->
       <plugin>
         <artifactId>maven-surefire-plugin</artifactId>
-        <version>2.7.2</version>
+        <version>2.5</version>
         <configuration>
           <skipTests>true</skipTests>
         </configuration>
@@ -629,24 +536,6 @@
       </plugins>
     </pluginManagement>
   </build>
-
-  <reporting>
-    <excludeDefaults>true</excludeDefaults>
-    <plugins>
-      <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>gwt-maven-plugin</artifactId>
-        <version>\${gwt.maven.version}</version>
-        <reportSets>
-          <reportSet>
-            <reports>
-              <report>soyc</report>
-            </reports>
-          </reportSet>
-        </reportSets>
-      </plugin>
-    </plugins>
-  </reporting>
 
   <!-- Repositories -->
   <repositories>
