--- a/bus-quickstart/src/main/resources/archetype-resources/pom.xml
+++ b/bus-quickstart/src/main/resources/archetype-resources/pom.xml
@@ -455,6 +455,7 @@
                                 <include>.errai/**</include>
                                 <include>src/main/webapp/WEB-INF/deploy/**</include>
                                 <include>src/main/webapp/WEB-INF/lib/**</include>
+                                <include>src/main/webapp/App/**</include>
                                 <include>**/gwt-unitCache/**</include>
                                 <include>**/*.JUnit/**</include>
                             </includes>
