--- a/kitchensink-quickstart/src/main/resources/archetype-resources/pom.xml
+++ b/kitchensink-quickstart/src/main/resources/archetype-resources/pom.xml
@@ -365,9 +365,6 @@
   </dependencies>
 
   <build>
-    <!-- Maven will append the version to the finalName (which is the name 
-      given to the generated war, and hence the context root) -->
-    <finalName>\${project.artifactId}</finalName>
     <plugins>
       <!-- Compiler plugin enforces Java 1.6 compatibility and activates 
         annotation processors -->
@@ -384,6 +381,11 @@
         <version>2.1.1</version>
         <configuration>
           <failOnMissingWebXml>false</failOnMissingWebXml>
+
+          <!-- Maven will append the version to the finalName (which is the name
+            given to the generated war, and hence the context root) -->
+          <warName>\${project.artifactId}</warName>
+
           <!-- We must exclude GWT client local classes from the deployment, 
             or classpath scanners such as Hibernate and Weld get confused when the webapp 
             is bootstrapping. -->
@@ -437,6 +439,9 @@
         <groupId>org.jboss.as.plugins</groupId>
         <artifactId>jboss-as-maven-plugin</artifactId>
         <version>7.1.0.Final</version>
+        <configuration>
+          <filename>\${project.artifactId}.\${project.packaging}</filename>
+        </configuration>
       </plugin>
 
       <plugin>
@@ -447,7 +452,7 @@
         <configuration>
           <filesets>
             <fileset>
-                <directory>${basedir}</directory>
+                <directory>\${basedir}</directory>
                 <includes>
                     <include>www-test/**</include>
                     <include>.gwt/**</include>
@@ -656,7 +661,7 @@
       <releases>
       </releases>
       <snapshots>
-        <enabled>true</enabled>
+        <enabled>false</enabled>
       </snapshots>
     </repository>
   </repositories>
