--- a/cdi-quickstart/src/main/resources/archetype-resources/pom.xml
+++ b/cdi-quickstart/src/main/resources/archetype-resources/pom.xml
@@ -13,14 +13,12 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <errai.version>${errai.target.version}</errai.version>
         <gwt.version>2.4.0</gwt.version>
-        <hsqldb.version>1.8.0.7</hsqldb.version>
         <weld.version>1.1.6.Final</weld.version>
         <gwt.maven.version>2.4.0</gwt.maven.version>
         <mvel.version>2.1.Beta8</mvel.version>
         <jetty.version>6.1.25</jetty.version>
         <slf4j.version>1.6.1</slf4j.version>
         <uel.impl.version>2.1.2-b04</uel.impl.version>
-        <webDescriptor>jetty</webDescriptor>
     </properties>
 
     <dependencies>
@@ -134,8 +132,7 @@
         </dependency>
 
         <!-- CDI Development Utils -->
-        <!-- This must be placed above com.google.gwt:gwt-dev to override the
-   Jetty that is present there -->
+        <!-- This must be placed above com.google.gwt:gwt-dev to override the Jetty that is present there -->
         <dependency>
             <groupId>org.mortbay.jetty</groupId>
             <artifactId>jetty</artifactId>
@@ -249,7 +246,179 @@
                 </dependency>
             </dependencies>
         </profile>
+        
+        <profile>
+            <id>jboss6</id>
+            <properties>
+                <webDescriptor>jboss6</webDescriptor>
+            </properties>
+            <dependencies>
 
+                <!-- all errai package are installed with the service archive -->
+                <dependency>
+                    <groupId>org.jboss.errai</groupId>
+                    <artifactId>errai-bus</artifactId>
+                    <exclusions>
+                        <exclusion>
+                            <groupId>org.slf4j</groupId>
+                            <artifactId>slf4j-log4j12</artifactId>
+                        </exclusion>
+                        <exclusion>
+                            <groupId>junit</groupId>
+                            <artifactId>junit</artifactId>
+                        </exclusion>
+                        <exclusion>
+                            <groupId>com.google.collections</groupId>
+                            <artifactId>google-collections</artifactId>
+                        </exclusion>
+                        <exclusion>
+                            <artifactId>javax.inject</artifactId>
+                            <groupId>javax.inject</groupId>
+                        </exclusion>
+                    </exclusions>
+                    <version>\${errai.version}</version>
+                </dependency>
+
+                <dependency>
+                    <groupId>javax.inject</groupId>
+                    <artifactId>javax.inject</artifactId>
+                    <version>1</version>
+                    <scope>provided</scope>
+                </dependency>
+
+                <dependency>
+                    <groupId>dom4j</groupId>
+                    <artifactId>dom4j</artifactId>
+                    <version>1.6</version>
+                    <scope>provided</scope>
+                </dependency>
+
+                <dependency>
+                    <groupId>xml-apis</groupId>
+                    <artifactId>xml-apis</artifactId>
+                    <version>1.0.b2</version>
+                    <scope>provided</scope>
+                </dependency>
+                <dependency>
+                    <groupId>org.javassist</groupId>
+                    <artifactId>javassist</artifactId>
+                    <version>3.15.0-GA</version>
+                    <scope>provided</scope>
+                </dependency>
+
+                <dependency>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>slf4j-api</artifactId>
+                    <scope>provided</scope>
+                    <version>\${slf4j.version}</version>
+                </dependency>
+
+                <dependency>
+                    <groupId>org.jboss.errai</groupId>
+                    <artifactId>errai-ioc</artifactId>
+                    <exclusions>
+                        <exclusion>
+                            <artifactId>jsr250-api</artifactId>
+                            <groupId>javax.annotation</groupId>
+                        </exclusion>
+                        <exclusion>
+                            <artifactId>javax.inject</artifactId>
+                            <groupId>javax.inject</groupId>
+                        </exclusion>
+                    </exclusions>
+                    <scope>compile</scope>
+                    <version>\${errai.version}</version>
+                </dependency>
+
+                <dependency>
+                    <groupId>org.jboss.errai</groupId>
+                    <artifactId>errai-tools</artifactId>
+                    <scope>provided</scope>
+                    <version>\${errai.version}</version>
+                </dependency>
+
+                <dependency>
+                    <groupId>org.jboss.errai</groupId>
+                    <artifactId>errai-javax-enterprise</artifactId>
+                    <version>\${errai.version}</version>
+                    <scope>provided</scope>
+                </dependency>
+
+                <!-- exclude development tools -->
+                <dependency>
+                    <groupId>org.jboss.errai</groupId>
+                    <artifactId>errai-cdi-jetty</artifactId>
+                    <version>\${errai.version}</version>
+                    <scope>provided</scope>
+                </dependency>
+
+                <!-- Weld is installed within JBoss 6 -->
+
+                <dependency>
+                    <groupId>org.glassfish.web</groupId>
+                    <artifactId>el-impl</artifactId>
+                    <version>\${uel.impl.version}</version>
+                    <scope>provided</scope>
+                </dependency>
+
+                <dependency>
+                    <groupId>org.jboss.weld.servlet</groupId>
+                    <artifactId>weld-servlet</artifactId>
+                    <scope>provided</scope>
+                    <version>\${weld.version}</version>
+                </dependency>
+
+                <dependency>
+                    <groupId>org.jboss.weld</groupId>
+                    <artifactId>weld-core</artifactId>
+                    <scope>provided</scope>
+                    <version>\${weld.version}</version>
+                </dependency>
+
+                <dependency>
+                    <groupId>org.jboss.weld.se</groupId>
+                    <artifactId>weld-se-core</artifactId>
+                    <scope>provided</scope>
+                    <version>\${weld.version}</version>
+                </dependency>
+
+                <dependency>
+                    <groupId>org.jboss.weld</groupId>
+                    <artifactId>weld-spi</artifactId>
+                    <scope>provided</scope>
+                    <version>1.1.Final</version>
+                </dependency>
+
+                <dependency>
+                    <groupId>org.mortbay.jetty</groupId>
+                    <artifactId>jetty</artifactId>
+                    <version>\${jetty.version}</version>
+                    <scope>provided</scope>
+                </dependency>
+
+                <dependency>
+                    <groupId>org.mortbay.jetty</groupId>
+                    <artifactId>jetty-plus</artifactId>
+                    <scope>provided</scope>
+                    <version>\${jetty.version}</version>
+                </dependency>
+
+                <dependency>
+                    <groupId>org.mortbay.jetty</groupId>
+                    <artifactId>jetty-naming</artifactId>
+                    <scope>provided</scope>
+                    <version>\${jetty.version}</version>
+                </dependency>
+
+                <dependency>
+                    <groupId>org.jboss.logging</groupId>
+                    <artifactId>jboss-logging</artifactId>
+                    <scope>provided</scope>
+                    <version>3.0.0.Beta4</version>
+                </dependency>
+            </dependencies>
+        </profile>
+        
         <!-- BEGIN JBOSS AS 7 PROFILE -->
         <profile>
             <id>jboss7</id>
@@ -853,8 +1022,7 @@
             </properties>
         </profile>
 
-        <!-- Profile that must be enabled when running integration tests (any
- test that extends GWTTestCase directly or indirectly) -->
+        <!-- Profile that must be enabled when running integration tests (any test that extends GWTTestCase directly or indirectly) -->
         <profile>
             <id>integration-test</id>
             <properties>
@@ -991,8 +1159,7 @@
                 </dependency>
 
                 <!-- CDI Development Utils -->
-                <!-- This must be placed above com.google.gwt:gwt-dev to override
-          the Jetty that is present there -->
+                <!-- This must be placed above com.google.gwt:gwt-dev to override the Jetty that is present there -->
                 <dependency>
                     <groupId>org.mortbay.jetty</groupId>
                     <artifactId>jetty</artifactId>
@@ -1086,7 +1253,6 @@
         </profile>
     </profiles>
     <build>
-        <finalName>\${project.artifactId}</finalName>
         <outputDirectory>src/main/webapp/WEB-INF/classes</outputDirectory>
 
         <plugins>
@@ -1115,6 +1281,7 @@
                 <artifactId>maven-war-plugin</artifactId>
                 <version>2.1.1</version>
                 <configuration>
+                    <warName>\${project.artifactId}</warName>
                     <outputFileNameMapping>@{artifactId}@-@{baseVersion}@@{dashClassifier?}@.@{extension}@</outputFileNameMapping>
                     <packagingExcludes>**/javax/**/*.*,**/client/local/**/*.class</packagingExcludes>
 
@@ -1175,7 +1342,7 @@
                 <configuration>
                     <filesets>
                         <fileset>
-                            <directory>${basedir}</directory>
+                            <directory>\${basedir}</directory>
                             <includes>
                                 <include>www-test/**</include>
                                 <include>.gwt/**</include>
