--- a/jaxrs-quickstart/src/main/resources/archetype-resources/pom.xml
+++ b/jaxrs-quickstart/src/main/resources/archetype-resources/pom.xml
@@ -36,7 +36,6 @@
     <gwt.version>2.4.0</gwt.version>
     <gwt.maven.version>2.4.0</gwt.maven.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <webDescriptor>jetty</webDescriptor>
   </properties>
 
   <dependencies>
@@ -165,6 +164,75 @@
       </dependencies>
     </profile>
 
+    <profile>
+      <id>jboss6</id>
+
+      <properties>
+        <webDescriptor>jboss6</webDescriptor>
+      </properties>
+
+      <dependencies>
+        <dependency>
+          <groupId>org.jboss.errai</groupId>
+          <artifactId>errai-ioc</artifactId>
+          <exclusions>
+            <exclusion>
+              <artifactId>jsr250-api</artifactId>
+              <groupId>javax.annotation</groupId>
+            </exclusion>
+            <exclusion>
+              <artifactId>javax.inject</artifactId>
+              <groupId>javax.inject</groupId>
+            </exclusion>
+          </exclusions>
+          <scope>compile</scope>
+          <version>\${errai.version}</version>
+        </dependency>
+
+        <dependency>
+          <groupId>javax.inject</groupId>
+          <artifactId>javax.inject</artifactId>
+          <version>1</version>
+          <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+          <groupId>org.slf4j</groupId>
+          <artifactId>slf4j-api</artifactId>
+          <version>1.6.1</version>
+          <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+          <groupId>org.slf4j</groupId>
+          <artifactId>slf4j-log4j12</artifactId>
+          <version>1.6.1</version>
+          <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+          <groupId>org.javassist</groupId>
+          <artifactId>javassist</artifactId>
+          <version>3.15.0-GA</version>
+          <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+          <groupId>org.jboss.resteasy</groupId>
+          <artifactId>resteasy-jaxrs</artifactId>
+          <version>2.2.3.GA</version>
+          <scope>provided</scope>
+        </dependency>
+        
+        <dependency>
+          <groupId>org.jboss.resteasy</groupId>
+          <artifactId>jaxrs-api</artifactId>
+          <version>2.2.3.GA</version>
+          <scope>provided</scope>
+        </dependency>
+      </dependencies>
+    </profile>
+    
     <profile>
       <id>jboss7</id>
 
