--- a/bus-quickstart/src/main/resources/archetype-resources/src/jboss7/WEB-INF/web.xml
+++ b/bus-quickstart/src/main/resources/archetype-resources/src/jboss7/WEB-INF/web.xml
@@ -11,7 +11,10 @@
              profile in pom.xml to use a different web.xml (for example, maybe src/tomcat/web.xml) -->
 		<servlet-name>ErraiServlet</servlet-name>
 		<servlet-class>org.jboss.errai.bus.server.servlet.DefaultBlockingServlet</servlet-class>
-    
+        <init-param>
+            <param-name>auto-discover-services</param-name>
+            <param-value>true</param-value>
+        </init-param>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
 
