--- a/cdi-quickstart/src/main/resources/archetype-resources/pom.xml
+++ b/cdi-quickstart/src/main/resources/archetype-resources/pom.xml
@@ -164,13 +164,6 @@
       <version>\${weld.version}</version>
     </dependency>
 
-    <dependency>
-      <groupId>org.glassfish.web</groupId>
-      <artifactId>el-impl</artifactId>
-      <scope>runtime</scope>
-      <version>\${uel.impl.version}</version>
-    </dependency>
-
     <!-- GWT and GWT Extensions -->
     <dependency>
       <groupId>com.google.gwt</groupId>
@@ -202,6 +195,15 @@
       <properties>
         <webDescriptor>jetty</webDescriptor>
       </properties>
+      <dependencies>
+        <!-- We need this for CDI BeanManager to work in Dev Mode -->
+        <dependency>
+          <groupId>org.mortbay.jetty</groupId>
+          <artifactId>jetty-naming</artifactId>
+          <version>\${jetty.version}</version>
+          <scope>compile</scope>
+        </dependency>
+      </dependencies>
     </profile>
 
     <profile>
@@ -254,7 +256,6 @@
       </properties>
       <dependencies>
 
-        <!-- all errai package are installed with the service archive -->
         <dependency>
           <groupId>org.jboss.errai</groupId>
           <artifactId>errai-bus</artifactId>
@@ -279,10 +280,25 @@
           <version>\${errai.version}</version>
         </dependency>
 
+        <!-- Exclude all the stuff provided by AS6 -->
         <dependency>
           <groupId>javax.inject</groupId>
           <artifactId>javax.inject</artifactId>
           <version>1</version>
+          <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+          <groupId>javax.annotation</groupId>
+          <artifactId>jsr250-api</artifactId>
+          <version>1.0</version>
+          <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+          <groupId>log4j</groupId>
+          <artifactId>log4j</artifactId>
+          <version>1.2.16</version>
           <scope>provided</scope>
         </dependency>
 
@@ -299,6 +315,7 @@
           <version>1.0.b2</version>
           <scope>provided</scope>
         </dependency>
+
         <dependency>
           <groupId>org.javassist</groupId>
           <artifactId>javassist</artifactId>
@@ -349,15 +366,6 @@
           <groupId>org.jboss.errai</groupId>
           <artifactId>errai-cdi-jetty</artifactId>
           <version>\${errai.version}</version>
-          <scope>provided</scope>
-        </dependency>
-
-        <!-- Weld is installed within JBoss 6 -->
-
-        <dependency>
-          <groupId>org.glassfish.web</groupId>
-          <artifactId>el-impl</artifactId>
-          <version>\${uel.impl.version}</version>
           <scope>provided</scope>
         </dependency>
 
@@ -419,7 +427,6 @@
       </dependencies>
     </profile>
 
-    <!-- BEGIN JBOSS AS 7 PROFILE -->
     <profile>
       <id>jboss7</id>
       <properties>
@@ -427,17 +434,14 @@
       </properties>
 
       <dependencies>
-        <!-- All errai package are installed with the service archive -->
         <dependency>
           <groupId>org.jboss.errai</groupId>
           <artifactId>errai-bus</artifactId>
           <exclusions>
-
             <exclusion>
               <groupId>junit</groupId>
               <artifactId>junit</artifactId>
             </exclusion>
-
             <exclusion>
               <artifactId>javax.inject</artifactId>
               <groupId>javax.inject</groupId>
@@ -462,23 +466,6 @@
 
         <dependency>
           <groupId>org.jboss.errai</groupId>
-          <artifactId>errai-ioc</artifactId>
-          <exclusions>
-            <exclusion>
-              <artifactId>jsr250-api</artifactId>
-              <groupId>javax.annotation</groupId>
-            </exclusion>
-            <exclusion>
-              <artifactId>javax.inject</artifactId>
-              <groupId>javax.inject</groupId>
-            </exclusion>
-          </exclusions>
-          <scope>compile</scope>
-          <version>\${errai.version}</version>
-        </dependency>
-
-        <dependency>
-          <groupId>org.jboss.errai</groupId>
           <artifactId>errai-tools</artifactId>
           <scope>provided</scope>
           <version>\${errai.version}</version>
@@ -499,26 +486,18 @@
           <scope>provided</scope>
         </dependency>
 
-        <!-- Weld is installed within JBoss -->
-        <dependency>
-          <groupId>org.glassfish.web</groupId>
-          <artifactId>el-impl</artifactId>
-          <version>\${uel.impl.version}</version>
-          <scope>provided</scope>
-        </dependency>
-
         <dependency>
           <groupId>org.jboss.weld.servlet</groupId>
           <artifactId>weld-servlet</artifactId>
-          <scope>provided</scope>
           <version>\${weld.version}</version>
+          <scope>provided</scope>
         </dependency>
 
         <dependency>
           <groupId>org.jboss.weld</groupId>
           <artifactId>weld-core</artifactId>
-          <scope>provided</scope>
           <version>\${weld.version}</version>
+          <scope>provided</scope>
         </dependency>
 
         <dependency>
@@ -526,13 +505,6 @@
           <artifactId>weld-se-core</artifactId>
           <scope>provided</scope>
           <version>\${weld.version}</version>
-        </dependency>
-
-        <dependency>
-          <groupId>org.jboss.weld</groupId>
-          <artifactId>weld-spi</artifactId>
-          <scope>provided</scope>
-          <version>1.1.Final</version>
         </dependency>
 
         <!-- Jetty is used for testing only -->
@@ -1005,6 +977,7 @@
       <id>integration-test</id>
       <properties>
         <profile.testOutputDirectory>src/main/webapp/WEB-INF/classes</profile.testOutputDirectory>
+        <webDescriptor>jetty</webDescriptor>
       </properties>
 
       <build>
@@ -1247,6 +1220,14 @@
         </configuration>
         <executions>
           <execution>
+            <id>gwt-clean</id>
+            <phase>clean</phase>
+            <goals>
+              <goal>clean</goal>
+            </goals>
+          </execution>
+          <execution>
+            <id>gwt-compile</id>
             <goals>
               <goal>resources</goal>
               <goal>compile</goal>
@@ -1324,9 +1305,10 @@
                 <include>www-test/**</include>
                 <include>.gwt/**</include>
                 <include>.errai/**</include>
+                <include>src/main/webapp/app/**</include>
                 <include>src/main/webapp/WEB-INF/deploy/**</include>
                 <include>src/main/webapp/WEB-INF/lib/**</include>
-                <include>src/main/webapp/app/**</include>
+                <include>src/main/webapp/WEB-INF/classes/**</include>
                 <include>**/gwt-unitCache/**</include>
                 <include>**/*.JUnit/**</include>
               </includes>
@@ -1334,8 +1316,8 @@
           </filesets>
         </configuration>
       </plugin>
-
     </plugins>
+
     <pluginManagement>
       <plugins>
         <plugin>
