--- a/bus-quickstart/pom.xml
+++ b/bus-quickstart/pom.xml
@@ -14,7 +14,7 @@
 	<parent>
 		<groupId>org.jboss.errai.archetypes</groupId>
 		<artifactId>archetypes-parent</artifactId>
-		<version>2.0-SNAPSHOT</version>
+		<version>2.0.CR1</version>
 	</parent>
 
 	<groupId>org.jboss.errai.archetypes</groupId>
