--- a/kitchensink-quickstart/src/main/resources/archetype-resources/pom.xml
+++ b/kitchensink-quickstart/src/main/resources/archetype-resources/pom.xml
@@ -22,7 +22,7 @@
       BOM -->
 #if ($enterprise == "true" || $enterprise == "y" || $enterprise == "yes" )
     <!-- Certified version of the JBoss EAP components we want to use -->
-    <version.org.jboss.spec.jboss.javaee6>3.0.0.Beta1-redhat-1</version.org.jboss.spec.jboss.javaee6>
+    <version.org.jboss.spec.jboss.javaee6>3.0.0.Final-redhat-1</version.org.jboss.spec.jboss.javaee6>
     <!-- Alternatively, comment out the above line, and un-comment the line 
       below to use version 2.0.0.Final which is based on community built dependencies. 
       You can actually use this stack with any version of JBoss AS that implements 
@@ -34,10 +34,10 @@
 #else
     <version.org.jboss.spec.jboss.javaee6>2.0.0.Final</version.org.jboss.spec.jboss.javaee6>
     <!-- Alternatively, comment out the above line, and un-comment the line 
-      below to use version 3.0.0.Beta1-redhat-1 which is a release certified to 
+      below to use version 3.0.0.Final-redhat-1 which is a release certified to 
       work with JBoss EAP 6. It requires you have access to the JBoss EAP 6 maven 
       repository. -->
-    <!-- <version.org.jboss.spec.jboss.javaee6>3.0.0.Beta1-redhat-1</version.org.jboss.spec.jboss.javaee6> -->
+    <!-- <version.org.jboss.spec.jboss.javaee6>3.0.0.Final-redhat-1</version.org.jboss.spec.jboss.javaee6> -->
     <version.org.jboss.errai>${errai.target.version}</version.org.jboss.errai>
     <version.com.google.gwt>2.4.0</version.com.google.gwt>
     <version.org.codehaus.mojo.gwt.maven.plugin>\${version.com.google.gwt}</version.org.codehaus.mojo.gwt.maven.plugin>
