--- a/pom.xml
+++ b/pom.xml
@@ -54,7 +54,7 @@
 		<module>bus-quickstart</module>
 		<module>cdi-quickstart</module>
 		<module>jaxrs-quickstart</module>
-		<module>kitchensink-quickstart</module>
+		<module>jboss-errai-kitchensink-archetype</module>
 	</modules>
 
 	<scm>
