Depend on weld-servlet-core instead of weld-servlet and slf4j-log4j instead of log4j

--- a/cdi-quickstart/src/main/resources/archetype-resources/pom.xml
+++ b/cdi-quickstart/src/main/resources/archetype-resources/pom.xml
@@ -37,9 +37,9 @@
     </dependency>
 
     <dependency>
-      <groupId>log4j</groupId>
-      <artifactId>log4j</artifactId>
-      <version>1.2.16</version>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-log4j12</artifactId>
+      <version>\${slf4j.version}</version>
     </dependency>
 
     <dependency>
@@ -160,7 +160,7 @@
 
     <dependency>
       <groupId>org.jboss.weld.servlet</groupId>
-      <artifactId>weld-servlet</artifactId>
+      <artifactId>weld-servlet-core</artifactId>
       <version>\${weld.version}</version>
     </dependency>
 
@@ -296,9 +296,9 @@
         </dependency>
 
         <dependency>
-          <groupId>log4j</groupId>
-          <artifactId>log4j</artifactId>
-          <version>1.2.16</version>
+          <groupId>org.slf4j</groupId>
+          <artifactId>slf4j-api</artifactId>
+          <version>\${slf4j.version}</version>
           <scope>provided</scope>
         </dependency>
 
@@ -371,7 +371,7 @@
 
         <dependency>
           <groupId>org.jboss.weld.servlet</groupId>
-          <artifactId>weld-servlet</artifactId>
+          <artifactId>weld-servlet-core</artifactId>
           <scope>provided</scope>
           <version>\${weld.version}</version>
         </dependency>
@@ -488,7 +488,7 @@
 
         <dependency>
           <groupId>org.jboss.weld.servlet</groupId>
-          <artifactId>weld-servlet</artifactId>
+          <artifactId>weld-servlet-core</artifactId>
           <version>\${weld.version}</version>
           <scope>provided</scope>
         </dependency>
@@ -639,7 +639,7 @@
 
         <dependency>
           <groupId>org.jboss.weld.servlet</groupId>
-          <artifactId>weld-servlet</artifactId>
+          <artifactId>weld-servlet-core</artifactId>
           <scope>provided</scope>
           <version>\${weld.version}</version>
         </dependency>
@@ -849,7 +849,7 @@
 
         <dependency>
           <groupId>org.jboss.weld.servlet</groupId>
-          <artifactId>weld-servlet</artifactId>
+          <artifactId>weld-servlet-core</artifactId>
           <scope>provided</scope>
           <version>\${weld.version}</version>
         </dependency>
@@ -1138,7 +1138,7 @@
         </dependency>
         <dependency>
           <groupId>org.jboss.weld.servlet</groupId>
-          <artifactId>weld-servlet</artifactId>
+          <artifactId>weld-servlet-core</artifactId>
           <version>\${weld.version}</version>
           <scope>compile</scope>
         </dependency>
