Cleaned up JAX-RS quickstart in preparation for Errai 3

--- a/jaxrs-quickstart/src/main/resources/archetype-resources/pom.xml
+++ b/jaxrs-quickstart/src/main/resources/archetype-resources/pom.xml
@@ -415,6 +415,7 @@
       <id>integration-test</id>
       <properties>
         <profile.testOutputDirectory>src/main/webapp/WEB-INF/classes</profile.testOutputDirectory>
+        <webDescriptor>jetty</webDescriptor>
       </properties>
 
       <build>
